--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
             <div class="button-1" onclick="buttonEquals()">=</div>
         </div>
     </div>
+    <h2 id="test"></h2>
 </body>
 </html>
